<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetPassword"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnBack"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
            android:fontFamily="@font/telex"
            android:onClick="backLogin" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_lock_24"
            android:layout_gravity="center"
            android:gravity="center"
            android:contentDescription="@string/descriptionIMGFP" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/telex"
            android:textSize="40sp"
            android:text="@string/tittleFP"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/azul_base_app"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/telex"
            android:textColor="@color/someTextLogin"
            android:layout_marginBottom="10dp"
            android:text="@string/indicationsFP"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailFP"
                app:hintTextColor="@color/azul_base_app"
                app:boxStrokeColor="@color/azul_base_app"
                android:layout_marginTop="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rcorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:fontFamily="@font/telex"
                    android:inputType="textEmailAddress" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/rbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/azul_base_app"
                    android:backgroundTint="@color/azul_base_app"
                    android:text="@string/sendMailFP"
                    android:fontFamily="@font/telex"
                    android:layout_marginTop="30dp"

                    />

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

    </LinearLayout>




</LinearLayout>